[Mac] Change the omnibox decoration padding

- Fixed the spacing for the RHS omnibox icons
- Changed how the LHS omnibox icon paddings are calculated so that it will be
easier to draw a hover background in a follow up CL.
- NOTE: the LHS omnibox icons spacing shouldn't be changed.

BUG=633156, 588377

Review-Url: https://codereview.chromium.org/2471583002
Cr-Commit-Position: refs/heads/master@{#429658}

Former-commit-id: f8c2ce99bb1ee0b1c6edb56d4194ecd886c76b8c