chrome/browser/ui/cocoa/location_bar/bubble_decoration.h
@@ -34,9 +34,6 @@ class BubbleDecoration : public LocationBarDecoration {
   // Implement |LocationBarDecoration|.
   CGFloat GetWidthForSpace(CGFloat width) override;
   void DrawInFrame(NSRect frame, NSView* control_view) override;
-  void DrawWithBackgroundInFrame(NSRect background_frame,
-                                 NSRect frame,
-                                 NSView* control_view) override;
   NSFont* GetFont() const override;
 
  protected:
